--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <script defer src="script.js"></script>
 </head>
 <body>
-  <!-- HEADER -->
+
+  <!-- HEADER (أنيق وثابت) -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="#home" aria-label="New Castle">
@@ -47,16 +48,16 @@
     </div>
   </header>
 
-  <!-- HERO -->
+  <!-- HERO (صور معمارية فقط) -->
   <section id="home" class="hero">
     <div class="hero-media">
-      <!-- صورة ثابتة: فيلا حديثة (معمارية) -->
+      <!-- واجهة برج/مبنى حديث -->
       <picture>
-        <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=1920&q=80" alt="واجهة فيلا حديثة" loading="eager" />
+        <img src="https://images.unsplash.com/photo-1448630360428-65456885c650?auto=format&fit=crop&w=1920&q=80" alt="واجهة مبنى مكاتب حديث" loading="eager" />
       </picture>
-      <!-- صورة ثابتة: واجهة مبنى زجاجي (معماري) -->
+      <!-- موقع إنشاء/هيكل خارجي -->
       <picture class="next">
-        <img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?auto=format&fit=crop&w=1920&q=80" alt="واجهة مبنى حديث" loading="lazy" />
+        <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=1920&q=80" alt="موقع إنشاءات ومعمار" loading="lazy" />
       </picture>
       <div class="gold-slash" aria-hidden="true"></div>
     </div>
@@ -100,38 +101,33 @@
     </div>
   </section>
 
-  <!-- SERVICES -->
+  <!-- SERVICES (صور واجهات/هياكل فقط) -->
   <section id="services" class="section alt">
     <div class="container">
       <h2 data-i18n="services.title">الخدمات</h2>
       <div class="services-grid">
         <article class="service">
-          <!-- هيكل خرساني (معماري) -->
-          <img src="https://images.unsplash.com/photo-1577412647305-991150c7d163?auto=format&fit=crop&w=1200&q=80" alt="هيكل خرساني حديث" loading="lazy"/>
+          <img src="https://images.unsplash.com/photo-1577412647305-991150c7d163?auto=format&fit=crop&w=1400&q=80" alt="هيكل خرساني متقدم" loading="lazy"/>
           <h3 data-i18n="services.s1.h">المقاولات العامة</h3>
           <p data-i18n="services.s1.p">تنفيذ كامل لفلل/مكاتب/مخازن من الأساسات حتى التسليم.</p>
         </article>
         <article class="service">
-          <!-- مكتب داخلي حديث (معماري داخلي) -->
-          <img src="https://images.unsplash.com/photo-1497366858526-0766cadbe8fa?auto=format&fit=crop&w=1200&q=80" alt="تشطيبات مكتب حديث" loading="lazy"/>
+          <img src="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?auto=format&fit=crop&w=1400&q=80" alt="تجديد واجهات معمارية" loading="lazy"/>
           <h3 data-i18n="services.s2.h">الصيانة والتجديد</h3>
           <p data-i18n="services.s2.p">خطط صيانة وقائية/تصحيحية وتجديد شامل.</p>
         </article>
         <article class="service">
-          <!-- جسر/بنية معمارية بدون مركبات -->
-          <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=1200&q=80" alt="جسر وبنية تحتية معمارية" loading="lazy"/>
+          <img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?auto=format&fit=crop&w=1400&q=80" alt="جسر وبنية تحتية" loading="lazy"/>
           <h3 data-i18n="services.s3.h">الطرق والبنية التحتية</h3>
           <p data-i18n="services.s3.p">أعمال بنية تحتية وهياكل وجسور.</p>
         </article>
         <article class="service">
-          <!-- مبنى صناعي حديث (واجهة معمارية) -->
-          <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?auto=format&fit=crop&w=1200&q=80" alt="مبنى صناعي حديث" loading="lazy"/>
+          <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?auto=format&fit=crop&w=1400&q=80" alt="منشأة صناعية حديثة" loading="lazy"/>
           <h3 data-i18n="services.s4.h">مرافق صناعية</h3>
-          <p data-i18n="services.s4.p">أعمال مدنية/كهربائية/ميكانيكية بمعايير سلامة صارمة.</p>
+          <p data-i18n="services.s4.p">مدني/كهربائي/ميكانيكي بمعايير سلامة صارمة.</p>
         </article>
         <article class="service">
-          <!-- داخلي فاخر (تصميم داخلي معماري) -->
-          <img src="https://images.unsplash.com/photo-1507209696998-3c532be9b2b6?auto=format&fit=crop&w=1200&q=80" alt="تشطيبات داخلية فاخرة" loading="lazy"/>
+          <img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?auto=format&fit=crop&w=1400&q=80" alt="واجهة مبنى بزجاج حديث" loading="lazy"/>
           <h3 data-i18n="services.s5.h">التشطيبات والديكور</h3>
           <p data-i18n="services.s5.p">تشطيبات راقية للمساحات السكنية والتجارية.</p>
         </article>
@@ -153,8 +149,7 @@
 
       <div class="projects-grid">
         <article class="project-card" data-type="residential">
-          <!-- فيلا سكنية -->
-          <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?auto=format&fit=crop&w=1600&q=80" alt="فيلا سكنية" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?auto=format&fit=crop&w=1600&q=80" alt="فيلا سكنية حديثة" loading="lazy" />
           <div class="pc-body">
             <h3 data-i18n="projects.items.mbz.title">فيلا سكنية – مدينة محمد بن زايد</h3>
             <p data-i18n="projects.items.mbz.meta">الاستشاري: Al Itqan</p>
@@ -163,7 +158,6 @@
         </article>
 
         <article class="project-card" data-type="residential">
-          <!-- مجلس خارجي/تمديد -->
           <img src="https://images.unsplash.com/photo-1523419409543-a5e549c1d6c5?auto=format&fit=crop&w=1600&q=80" alt="مسكن حديث" loading="lazy" />
           <div class="pc-body">
             <h3 data-i18n="projects.items.w25.title">مجلس خارجي وتمديد غرفة – West 25</h3>
@@ -173,8 +167,7 @@
         </article>
 
         <article class="project-card" data-type="residential">
-          <!-- فيلا أخرى -->
-          <img src="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?auto=format&fit=crop&w=1600&q=80" alt="واجهة فيلا عصرية" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=1600&q=80" alt="واجهة فيلا" loading="lazy" />
           <div class="pc-body">
             <h3 data-i18n="projects.items.bahia.title">فيلا – الباهية</h3>
             <p data-i18n="projects.items.bahia.meta">الاستشاري: Al Khail</p>
@@ -183,8 +176,7 @@
         </article>
 
         <article class="project-card" data-type="commercial">
-          <!-- مبنى مكاتب/واجهات -->
-          <img src="https://images.unsplash.com/photo-1448630360428-65456885c650?auto=format&fit=crop&w=1600&q=80" alt="مبنى مكاتب حديث" loading="lazy" />
+          <img src="https://images.unsplash.com/photo-1485827404703-89b55fcc595e?auto=format&fit=crop&w=1600&q=80" alt="مبنى مكاتب وتجاري" loading="lazy" />
           <div class="pc-body">
             <h3 data-i18n="projects.items.m36.title">مبنى مكاتب ومحلات – M36</h3>
             <p data-i18n="projects.items.m36.meta">الاستشاري: Dar Al-Handasah</p>
@@ -275,7 +267,7 @@
 
   <!-- Schema -->
   <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"LocalBusiness","name":"New Castle Contracting & General Maintenance","image":"https://images.unsplash.com/photo-1491553895911-0055eca6402d?auto=format&fit=crop&w=800&q=70","telephone":"+971502402894","email":"Newcastles.ae@gmail.com","address":{"@type":"PostalAddress","addressCountry":"AE","addressLocality":"Abu Dhabi"},"areaServed":["Abu Dhabi","UAE"],"url":"https://example.com","foundingDate":"2008"}
+  {"@context":"https://schema.org","@type":"LocalBusiness","name":"New Castle Contracting & General Maintenance","image":"https://images.unsplash.com/photo-1484154218962-a197022b5858?auto=format&fit=crop&w=1200&q=70","telephone":"+971502402894","email":"Newcastles.ae@gmail.com","address":{"@type":"PostalAddress","addressCountry":"AE","addressLocality":"Abu Dhabi"},"areaServed":["Abu Dhabi","UAE"],"url":"https://example.com","foundingDate":"2008"}
   </script>
 </body>
 </html>
