--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container grid-2">
       <div>
         <h2 data-i18n="about.title">من نحن</h2>
-        <p data-i18n="about.body">تأسست نيو كاسل عام 2008 لتقديم حلول إنشائية وصيانة عالية الاعتمادية للقطاعات السكنية والتجارية والصناعية في أبوظبي، عبر فريق محترف وشراكات هندسية راسخة.</p>
+        <p data-i18n="about.body">تأسست القصور الحديثة عام 2008 لتقديم حلول إنشائية وصيانة عالية الاعتمادية للقطاعات السكنية والتجارية والصناعية في أبوظبي، عبر فريق محترف وشراكات هندسية راسخة.</p>
         <div class="pill-group">
           <span class="pill" data-i18n="about.sectors.r">سكني</span>
           <span class="pill" data-i18n="about.sectors.c">تجاري</span>
